--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.5",
     "input-otp": "^1.4.1",
+    "lucide": "^0.468.0",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
