[add] firebase storage

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
+    "firebase-tools": "^13.29.1",
     "framer-motion": "^11.14.4",
     "input-otp": "^1.4.1",
     "lucide": "^0.468.0",
@@ -23,9 +24,11 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-horizontal-scrolling-menu": "^8.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
