--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.0.2",
     "firebase-tools": "^13.29.1",
